--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.app-wrapper{
+  display: grid;
+  width: 1200px;
+  margin: 0 auto;
+  grid-template-areas: "h h" "n c";
+  grid-template-columns: 1.2fr 10fr;
+  grid-template-rows: 0.1fr 10fr;
+
+  /* grid-gap: 10px */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav{
+  grid-area: n;
+  background-color: yellow;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header{
+  grid-area: h;
+  background-color: blue;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header img{
+  width: 60px;
+  height: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+.content{
+  grid-area: c;
+  background-color: green;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a.pages{
+  display: block;
+  padding-top: 8px;
+  padding-left: 15px;
+  padding-bottom: 0px;
+}
+
+/* img.picture{
+  display: block;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 40px;
+} */
+
+div.info{
+  padding-left: 40px;
+  padding-top: 7px;
 }
