27 video samuray path

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@
   grid-template-columns: 1.2fr 10fr;
   grid-template-rows: 0.1fr 10fr;
 }
+
+.app-wrapper-content{
+  grid-area: c;
+  background-color: green;
+}
