--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,11 +3,26 @@
     background-color: rgb(102, 143, 153);
 }
 
-.item{
+.item {
     display: block;
     padding-top: 8px;
     padding-left: 15px;
     padding-bottom: 0px;
-    color:hsl(357, 84%, 45%);
+    color: white;
 }
-  
+
+.item a{
+    text-decoration: none;
+}
+
+.item a:hover{
+    background-color: #5088ff ;
+}
+
+.linkNotActive{
+    color: white;
+}
+
+.linkActive{
+    color: black;
+}
